hw19-project/k8s-config/prometheus-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - image: prom/prometheus:v2.47.0
          name: prometheus
          args: [ "--config.file=/etc/prometheus/prometheus.yml" ]
          ports:
            - containerPort: 9090
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-config
      volumes:
        - name: prometheus-config
          hostPath:
            path: /home/docker/volume/prometheus/prometheus.yml
            type: File
